# herscat

./: .goreleaser.macos.yaml  .goreleaser.windows.yaml  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.goreleaser  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: aur.yml  release.yml
src/: cli.rs  config.rs  main.rs  parser.rs  process.rs  stressor.rs
src/stressor/: download.rs  mod.rs  tcp.rs  udp.rs
