[package]
name = "herscat"
version = "0.1.0"
edition = "2024"
authors = ["vffuunnyy <vffuunnyy@gmail.com>"]
description = "High-intensity xray proxy stress tester in Rust"
license = "MIT OR Apache-2.0"
keywords = ["xray", "proxy", "stress-testing", "load-testing", "benchmark"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
futures = "0.3"
colored = "2.0"
base64 = "0.21"
percent-encoding = "2.3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
panic = "abort"