[package]
exclude = [
    "dist/*",
    ".github/*",
    "Dockerfile*",
    ".goreleaser*",
    "Cross.toml",
    "tests/*",
    "scripts/*",
]

name = "herscat"
version = "0.2.0-pre"
edition = "2024"
authors = ["vffuunnyy <vffuunnyy@gmail.com>"]
description = "High-intensity xray proxy stress tester in Rust"
license = "MIT OR Apache-2.0"
keywords = ["xray", "proxy", "stress-testing", "load-testing", "benchmark"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "socks", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
rand = "0.9.2"
futures = "0.3.31"
colored = "3.0.0"
base64 = "0.22.1"
percent-encoding = "2.3.2"
tokio-socks = "0.5.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
panic = "abort"
